# cxx-write-once-run-anywhere

./: Dockerfile  build.sh  dockcross_C++_Write_Once,_Run_Anywhere.ipynb  dockcross_CXX_Write_Once_Run_Anywhere.ipynb  requirements.txt  run.sh
example/src/: CMakeLists.txt  IntrospectionDemo.cxx  IntrospectionDemoConfigure.h.in
